assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Libre+Caslon+Text&display=swap');


html,
body {
  padding: 0;
  margin: 0;
  min-height: 100vh;
  width: 100%;
}

body {
  background-color: white;
  color: #4d4c4c;
  position: relative;
  overflow-x: hidden;
  font-family: 'Libre Caslon Text', serif;

}


.top-container {
  display: flex;
  justify-content: center;
}

.title-text {
  height: 300px;
  width: 500px;
  margin-top: 5%;
}

.logo {
  height: 250px;
  width: 200px;
  margin-left: 40px;
  margin-top: 40px;
}

.col-8 {
  display: flex;
  justify-content: center;
}

.col-4 {
  display: flex;
  justify-content: center;
}

.nav-bar a:link {
  color: #244b2c;
  text-decoration: none;
}

.nav-bar a:visited {
  text-decoration: none;
  color: #244b2c;
}

.active {
  text-decoration: underline !important;
}

p {
  padding: 0 20px 0 20px;
  font-size: 13px;
}

.row {
  display: flex;
  justify-content: center;

}

/* Image of bookshelf */
.bookshop-opening-img {
  height: 395px;
  width: 400px;
  margin: 40px;
}

/* Opening hours text */
.opening-hours-text {
  font-size: 13px;
  text-align: center;
}

/* Border surrounding the opening hours text */
.opening-hours-border {
  border: 3px solid #192413;
  height: 394px;
  width: 400px;
  background-color: #B8C6AF;
  background-color: rgba(184, 198, 175, .8);
  margin: 40px;
}


.map {
  border: 3px solid #192413;
  height: 405px;
  width: 405px;
  margin: 40px;
}


.holding-books {
  height: 400px;
  width: 400px;
  margin: 40px;
}

h1 {
  font-family: 'Libre Baskerville', serif;
}

h2 {
  margin-bottom: 30px;
  margin-top: 20px;
  font-size: 18px;
  text-align: center;
  font-family: 'Libre Baskerville', serif;
  font-size: 22px;
}

h3 {
  font-family: 'Libre Baskerville', serif;
  font-size: 18px;
}

.horizontal-rule {
  display: flex;
  width: 100%;
  justify-content: center;
  margin-top: 40px;
}

.hr-line {
  width: 50%;
  position: absolute;
  margin: 22px auto;
  border-bottom: 1px solid #4d4c4c;
}

.book {
  top: 3px;
  color: #4d4c4c;
  height: 40px;
  width: 40px;
  background-color: transparent;
  /* instead of white as there was overlap on smaller screens */
  position: relative;
}


.nav-bar {
  font-size: 100%;
  letter-spacing: 3px;
  text-align: center;
  padding-bottom: 25px;
  font-family: 'Libre Baskerville', serif;
 
}

.nav-bar li {
  margin-right: 30px;
  text-decoration: none;
  color: #4d4c4c;
  list-style-type: none;
  display: inline-block;
  font-size: 25px;
}

.nav-bar li a:hover {
  text-decoration: underline;
}

.image1-container {
  height: 500px;
  position: relative;
  background: url("https://images.unsplash.com/photo-1533327325824-76bc4e62d560?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1469&q=80") no-repeat center center;
  /* Below code provided by CI Bootstrap Whiskey Drop */
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;

  /* below code provided by CI Love Running Project */
  animation-name: image1-zoom;
  animation-duration: 5s;
  animation-fill-mode: forwards;

}

@keyframes image1-zoom {
  from {
    transform: scale(1);
  }

  to {
    transform: scale(1.1);
  }
}

footer {
  display: block;
  background-color: #192413;
  color: white;
  text-align: center;
  height: 150px;
  margin-top: auto;
  display: flex;
  flex-wrap: nowrap;
  justify-content: center;
  align-items: center;
  align-content: center;
}


/* Our Collections Page */

.collections-main-img-container {
  height: 500px;
  width: 100%;
  overflow: hidden;
  position: relative;
  background: url(../images/collections-img-tiny.jpg) no-repeat center center;
  background-size: cover;
  /* "https://images.unsplash.com/photo-1580031553994-e504832075ab?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" */
}

.collection {
  margin-left: 40px;
  margin-top: 40px;
  margin-bottom: 40px;
}

.collection-text {
  text-align: center;
  border: 3px solid #192413;
  background-color: #66735F;
  width: 20%;
  color: white;
  margin: 0 40px 0 0;
  height: 500px;
  width: 356px;
}


.collections img {
  height: 500px;
  width: 356px;
}

.collections {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

/* Media Querries */

@media screen and (max-width: 768px) {
  .image1-container img {
    max-height: 150px;
    height: 150px;
    width: 100%;
  }

  .title-text {
    height: 185px;
    width: 275px;
    margin-top: 40px;
  }

  .logo {
    height: 125px;
    width: 100px;
    margin-top: 25%;
  }

  .nav-bar a {
    font-size: 20px;
  }

}

@media screen and (max-width: 480px) {

  /* 480px */
  .logo {
    height: 100px;
    width: 75px;
    margin-top: 30px;
    margin-left: 20px;
  }

  .title-text {
    height: 150px;
    width: 200px;
  }

  .contact-form {
    height: 650px !important;
    width: 400px !important;
    border-radius: 10px !important;
  }

  .contact-form-container {
    float: left;
    clear: right;
  }
}

/* Form Section */

#form-section {

  background: url(../images/contact-us.jpg) no-repeat center center;
  background-size: cover;
  background-position: center;
  height: 900px;
  display: flex;
  justify-content: center;
  align-items: center;
  align-content: center;
}

#form-section h2 {
  font-size: 20px;
  font-family: 'Libre Baskerville', serif;
  margin-top: 40px;

}

.contact-form {
  color: black;
  background-color: white;
  padding-bottom: 20px;
  padding: 30px;
  padding-top: 30px;
  text-align: center;
  font-family: 'Libre Caslon Text', serif;
  letter-spacing: 2px;
  width: 100%;
  /* Should be width: 50% but that's too narrow ?*/
  margin: 50px auto;
  border-radius: 20px;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.submit-btn {
  margin-top: 25px;
  border-radius: 15%;
  padding: 10px 20px;
  font-size: 16px;
  background-color: #244b2c;
  color: white;
}

/* Submit button hover effect */
.submit-btn {
  display: inline-block;
  vertical-align: middle;
  transform: translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  backface-visibility: hidden;
  -moz-osx-font-smoothing: grayscale;
  transition-duration: 0.3s;
  transition-property: transform;
}

.submit-btn:hover,
.submit-btn:focus,
.submit-btn:active {
  transform: scale(1.3);
}

.contact-section {
  overflow: hidden;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  align-content: center;
  background: url(../images/contact-info-img.jpg) no-repeat center center;
  height: 600px;
  width: 100%;
  background-size: cover;
}

#contact-info h1 {
  letter-spacing: 2px;
  margin-bottom: 20px;
}

#contact-info h2 {
  margin-bottom: 10px;
}

#contact-info {
  background-color: white;
  text-align: center;
  color: black;
  padding: 40px;
  border-radius: 20px;
  /* Box-shadow code provided by https://getcssscan.com/css-box-shadow-examples as suggested by mentor */
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

#contact-info p {
  font-size: 16px;
}

/* Thank you page directed to by the form */

.thank-you-message {
  text-align: center;
  background-color: white;
  padding-top: 30px;
  padding-bottom: 30px;
  color: black;
  padding-left: 30px;
  padding-right: 30px;
  border-radius: 20px;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.thank-you-message h1 {
  padding-bottom: 20px;
  letter-spacing: 2px;
}

.thank-you-container {
  background-color: #8E9C86;
  background: url(../images/park-hill.jpg) no-repeat center center;
  height: 600px;
  width: 100%;
  background-size: cover;
  display: flex;
  justify-content: center;
  align-items: center;
  align-content: center;
}

/* Social Networks */

.social-networks {
  color: white;
  text-align: center;
}

.social-networks i {
  color: white;
  text-decoration: none;
  padding: 40px;
  font-size: 50px;
  margin-top: 20px;
}

.social-networks li {
  display: inline;
}

/* Social networks hover effect base provided by Ian Lunn */
.hvr-grow {
  display: inline-block;
  vertical-align: middle;
  transform: translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  backface-visibility: hidden;
  -moz-osx-font-smoothing: grayscale;
  transition-duration: 0.3s;
  transition-property: transform;
}

.hvr-grow:hover,
.hvr-grow:focus,
.hvr-grow:active {
  transform: scale(1.3);
}

